2008-02-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package.rb:  Broke up Tar bits into separate files.
	* lib/rubygems/package/tar_reader/entry.rb:  Don't copy TarHeader data
	into Entry, go through #header instead.  Better tests for
	TarReader::Entry.

2008-02-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Automatically fall back to
	local-only install on network error.  Fixes bug #15759 by Chauk-Mean P.
	* lib/rubygems/source_index.rb:  Process spec dirs so that earlier
	dirs override later dirs.  Fixes bug #14816 by Kurt Stephens.

2008-02-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb:  Only update gems that need
	updates.  Fixes bug #14780 by Mathieu Lajugie.  Don't force
	remote-only updates.  Properly handle dependencies when updating.
	Fixes bug #17488 by Hongli Lai.
	* lib/rubygems/commands/environment_command.rb:  Display path as a
	usable path.
	* lib/rubygems.rb:  Don't add APPLE_GEM_HOME with ENV['GEM_HOME'].

2008-02-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Expand sitelibdir when checking prefix.  Fixes bug
	#17983 by Hemant Kumar.
	* setup.rb:  Print release notes on installation.  Tell people where
	`gem` was installed.
	* bin/update_rubygems:  Added --help output to explain how to install
	earlier versions of RubyGems.  Added --version option workaround.
	Fixes bug #16842 by Chad Woolley.
	* lib/rubygems/install_command.rb:  Give proper exit code on failure.
	Fixes bug #17438 by Josh Nichols.

2008-02-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Change hosts correctly when
	redirecting.  Handle EOFError from Net::HTTP.
	* lib/rubygems/commands/specification_command.rb:  Pull specifications
	from gem files.
	* lib/rubygems/uninstaller.rb:  When :executable is set, don't ask the
	user.  Fixes bug #16812 by Matt Mower.  Raise exception instead of
	printing message when gem is not in GEM_HOME.